# agent-orchestrator

./: CLAUDE.md  README.md  agent_loader.py  agent_openrouter.py  conditions.py  display.py  harness.py  langfuse_client.py  main.py  pipeline.py  pyproject.toml  repl.py  step_io.py  streaming.py  tracing.py  workflow.py
.claude/workflows/: linear-card-to-pr.js
agents/: CLAUDE.md
docs/: CLAUDE.md
docs/superpowers/: CLAUDE.md
docs/superpowers/plans/: CLAUDE.md
docs/superpowers/specs/: CLAUDE.md
skills/: CLAUDE.md
skills/brainstorming/: CLAUDE.md
skills/brainstorming/scripts/: CLAUDE.md
skills/reverse/: CLAUDE.md
tests/: CLAUDE.md  conftest.py  test_conditions.py  test_harness.py  test_step_io.py  test_streaming.py  test_tools.py  test_trace.py
workflows/: CLAUDE.md
